# REST3D

./: .gitignore  1_infer_scenecanon.sh  2_stable_scene.sh  3_replay_in_simulator.sh  INSTALL.md  LICENSE  README.md  index.html  pyproject.toml
assets/custom_cartoon_simpson/dc/: simulation.json
assets/custom_cartoon_simpson/gen3dsr/: simulation.json
assets/custom_cartoon_simpson/ours/: simulation.json
assets/custom_cartoon_simpson/sam3d/: simulation.json
assets/custom_cartoon_simpson/sg/: simulation.json
assets/custom_room1/gen3dsr/: simulation.json
assets/custom_room1/ours/: simulation.json
assets/custom_room1/sam3d/: simulation.json
assets/custom_room1/sg/: simulation.json
assets/custom_room4/dc/: simulation.json
assets/custom_room4/gen3dsr/: simulation.json
assets/custom_room4/ours/: simulation.json
assets/custom_room4/sam3d/: simulation.json
assets/custom_room4/sg/: simulation.json
assets/custom_room5/ours/: simulation.json
assets/custom_room5/sam3d/: simulation.json
assets/custom_room5/sg/: simulation.json
assets/custom_viga/dc/: simulation.json
environments/: default.yml  install_gym.md  install_rest3d.md  requirements_rest3d.txt
rest3d/: __init__.py
rest3d/config/: __init__.py  stable_scene_cfg.py
rest3d/models/: __init__.py  build_sam3dobj.py  cem_opt.py  scene_layout.py
rest3d/prompts/: list_objects.txt
rest3d/utils/: coll_det.py  io.py  log.py  mesh.py  postprocess.py  quat.py  scene_io.py  urdf.py  vis.py  vlm.py
scripts/: infer_scene3d.py  infer_scenetree.py  replay_in_simulator.py  stable_scene.py
(+542 files in other folders)
