[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rest3d"
version = "0.1.0"
description = "REST3D: Reconstructing Physically Stable 3D Scenes from a Single Image"
readme = "README.md"
requires-python = ">=3.10"
license = "CC-BY-NC-4.0"
license-files = ["LICENSE"]
authors = [
    { name = "Xiaoxuan Ma" },
]
keywords = ["single-image scene reconstruction", "physical scene understanding", "simulation-ready scene"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Scene Reconstruction",
]
dependencies = [
    "numpy",
    "torch",
    "opencv-python",
    "Pillow",
    "trimesh",
    "pycocotools",
    "hydra-core",
    "omegaconf",
]

[project.optional-dependencies]
gemini = ["google-genai"]
gpt4o  = ["requests"]
all    = ["google-genai", "requests"]

[tool.setuptools]
packages = ["rest3d", "rest3d.models", "rest3d.utils"]
include-package-data = true

[tool.setuptools.package-data]
rest3d = ["prompts/*.txt"]
